# play_with_depthai

./: .gitignore  README.md  download_resource.sh
common_helper/cmakes/: build_setting.cmake
pj_depthai_basic_camera/: CMakeLists.txt  main.cpp
pj_depthai_basic_mobilenet/: CMakeLists.txt  main.cpp
pj_depthai_basic_preview/: main.cpp
pj_depthai_depth_by_tensorrt/: CMakeLists.txt  README.md  main.cpp
pj_depthai_depth_by_tensorrt/image_processor/: CMakeLists.txt  depth_midasv2_engine.cpp  depth_midasv2_engine.h  depth_stereo_engine.cpp  image_processor.cpp  image_processor.h
